--- a/app/views/pins/_save_modal.html.erb
+++ b/app/views/pins/_save_modal.html.erb
@@ -2,7 +2,7 @@
   class="fixed inset-0 bg-black bg-opacity-50 hidden items-center justify-center z-50"
   data-save-modal-target="overlay"
   data-controller="save-modal"
-  data-save-modal-pin-id="<%= @pin.id %>"
+  data-save-modal-pin-id="<%= pin.id %>"
 >
   <div class="bg-white rounded-xl p-6 w-full max-w-md shadow-xl">
 
