--- a/app/views/pins/_comments.html.erb
+++ b/app/views/pins/_comments.html.erb
@@ -1,33 +1,9 @@
 <% if logged_in? %>
-  <div class="mb-6">
-    <%= form_with model: [pin, Comment.new], class: "space-y-3" do |f| %>
-
-      <div class="flex-1">
-        <div class="relative w-full" data-controller="mentions">
-
-          <%= f.text_area :content,
-              rows: 3,
-              placeholder: "Add a comment...",
-              class: "w-full border p-2 rounded",
-              data: {
-                action: "input->mentions#search",
-                mentions_target: "input"
-              } %>
-
-          <div data-mentions-target="dropdown"
-               class="absolute left-0 top-full mt-1 w-full bg-white border rounded-lg shadow hidden z-50">
-          </div>
-        </div>
-
-        <%= f.submit "Comment",
-            class: "mt-2 px-4 py-2 bg-blue-600 text-white rounded" %>
-      </div>
-
-    <% end %>
+  <div id="new_comment_form_<%= pin.id %>" class="mb-6">
+    <%= render "pins/comment_form", pin: pin %>
   </div>
 <% end %>
 
-<!-- COMMENTS LIST -->
 <% pin.comments.where(parent_id: nil).order(created_at: :asc).each do |comment| %>
   <%= render "pins/comment", comment: comment %>
 <% end %>
