--- a/app/views/comments/destroy.turbo_stream.erb
+++ b/app/views/comments/destroy.turbo_stream.erb
@@ -1,7 +1,12 @@
 <%= turbo_stream.remove "comment-#{@comment.id}" %>
+
 <% @comment.replies.each do |reply| %>
   <%= turbo_stream.remove "comment-#{reply.id}" %>
 <% end %>
+
+
 <%= turbo_stream.replace "comment_count_#{@pin.id}" do %>
-  <%= @pin.comments.where(parent_id: nil).count %>
+  <span id="comment_count_<%= @pin.id %>">
+    <%= @pin.comments.where(parent_id: nil).count %>
+  </span>
 <% end %>
