Refactoring like model and likes controller into services

--- a/app/views/pins/_pin_card.html.erb
+++ b/app/views/pins/_pin_card.html.erb
@@ -58,7 +58,7 @@
       <span>💬 <%= pin.comments.count %></span>
       <span>🔁 <%= pin.reposts.count %></span>
 
-      <!-- ⭐ ALWAYS VISIBLE SAVE ICON -->
+      <!--  ALWAYS VISIBLE SAVE ICON -->
       <button 
         type="button"
         class="text-gray-700 text-lg hover:text-blue-600"
