--- a/app/views/pins/_save_modal.html.erb
+++ b/app/views/pins/_save_modal.html.erb
@@ -9,17 +9,19 @@
     <h2 class="text-lg font-bold mb-4">Save to Collection</h2>
 
     <!-- Existing collections -->
-    <div class="space-y-2 mb-4">
-      <% current_user.collections.each do |collection| %>
-        <button 
-          class="w-full text-left px-4 py-2 border rounded-lg hover:bg-gray-100"
-          data-action="click->save-modal#saveToExisting"
-          data-collection-id="<%= collection.id %>"
-        >
-          <%= collection.name %>
-        </button>
-      <% end %>
-    </div>
+    <% if current_user %>
+      <div class="space-y-2 mb-4">
+        <% current_user.collections.each do |collection| %>
+          <button 
+            class="w-full text-left px-4 py-2 border rounded-lg hover:bg-gray-100"
+            data-action="click->save-modal#saveToExisting"
+            data-collection-id="<%= collection.id %>"
+          >
+            <%= collection.name %>
+          </button>
+        <% end %>
+      </div>
+    <% end %>
 
     <!-- Create new collection -->
     <div class="mb-4">
