--- a/app/views/user_mailer/email_verification.html.erb
+++ b/app/views/user_mailer/email_verification.html.erb
@@ -1,5 +1,16 @@
-<h1>User#email_verification</h1>
+<h1>Verify your email</h1>
+
+<p>Hi <%= @user.username %>,</p>
 
 <p>
-  <%= @greeting %>, find me in app/views/user_mailer/email_verification.html.erb
+  Please click the link below to verify your email address:
+</p>
+
+<p>
+  <%= link_to "Verify my email",
+      verify_email_url(token: @user.email_verification_token) %>
+</p>
+
+<p>
+  If you did not create this account, you can safely ignore this email.
 </p>
